// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuButton /> test basic rendering when close 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-controls="menu-list-grow"
      aria-haspopup="true"
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      data-testid="button-message-tag"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        menu-button-message
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<MenuButton /> test basic rendering when open 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-controls="menu-list-grow"
      aria-haspopup="true"
      class="MuiButtonBase-root MuiButton-root MuiButton-text"
      data-testid="button-message-tag"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        menu-button-message
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <div
      role="tooltip"
      style="position: absolute;"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        id="menu-list-grow"
        style="opacity: 1; transform: scale(1, 1); transform-origin: center top; transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      >
        <ul
          class="MuiList-root MuiList-padding"
          role="menu"
          tabindex="-1"
        >
          <li
            aria-disabled="false"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            data-testid="menu-item-tag-2"
            role="menuitem"
            tabindex="-1"
          >
            2 min
            <span
              class="MuiTouchRipple-root"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
